--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,17 @@ on:
     branches:
       - master
     paths:
-      - 'docker-compose.yml'
-      - 'Makefile'
+      - 'orchestration/docker-compose.yml'
+      - 'orchestration/Makefile'
       - '.github/workflows/**'
-      - '*dockerfile'
-      - 'modules/**'
-      - '**.tf'
+      - 'orchestration/*dockerfile'
+      - 'infrastructure/modules/**'
+      - 'infrastructure/**.tf'
 jobs:
   terraform_plan:
+    defaults:
+      run:
+        working-directory: ./infrastructure
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -23,6 +26,9 @@ jobs:
       run: make run_plan       
 
   terraform_apply:
+    defaults:
+      run:
+        working-directory: ./infrastructure
     environment:
       name: approval
     needs: terraform_plan
