--- a/orchestration/docker-compose.yml
+++ b/orchestration/docker-compose.yml
@@ -5,10 +5,7 @@ services:
     image: contino/terraform
     volumes:
       - type: bind
-        source: .
+        source: ../infrastructure
         target: /opt/app
     working_dir: /opt/app
     env_file: .env
-
-
-    
