--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
   terraform_plan:
     defaults:
       run:
-        working-directory: ./infrastructure
+        working-directory: ./orchestration
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -28,7 +28,7 @@ jobs:
   terraform_apply:
     defaults:
       run:
-        working-directory: ./infrastructure
+        working-directory: ./orchestration
     environment:
       name: approval
     needs: terraform_plan
