Updating github workflows

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -8,7 +8,7 @@ on:
       - 'orchestration/Makefile'
       - '.github/workflows/**'
       - 'orchestration/*dockerfile'
-      - 'infrastructure/.env'
+      - 'orchestration/.env'
       - 'infrastructure/modules/**'
       - 'infrastructure/**.tf'
 jobs:
