--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -13,7 +13,9 @@ on:
       - 'infrastructure/**.tf'
 jobs:
   terraform_destroy_plan:
-  working-directory: ./orchestration
+    defaults:
+      run:
+        working-directory: ./orchestration
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -25,7 +27,9 @@ jobs:
       run: make run_destroy_plan       
 
   terraform_destroy_apply:
-  working-directory: ./orchestration
+    defaults:
+      run:
+        working-directory: ./orchestration
     environment:
       name: approval
     needs: terraform_destroy_plan
