--- a/.github/workflows/weather-app.yml
+++ b/.github/workflows/weather-app.yml
@@ -14,38 +14,56 @@ on:
       - 'application/package.json'
       - 'application/weather-app-dockerfile'
 jobs:
-  build:
+  ecr_login:
+    defaults:
+      run:
+        working-directory: ./application
     runs-on: ubuntu-latest
-    name: Build and push docker image to Amazon ECR
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      ECR_REPO_NAME:  ${{ secrets.ECR_REPO_NAME }} 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: ECR_Login
+      run: make ecr_login       
 
-      - name: Login to Amazon ECR
+  build_docker_image:
+    defaults:
+      run:
         working-directory: ./application
-        run: make ecr_login
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
-
-      - name: Build docker image
-        working-directory: ./application
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
+    environment:
+      name: approval
+    needs: ecr_login
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      ECR_REPO_NAME:  ${{ secrets.ECR_REPO_NAME }} 
+    steps:
+    - uses: actions/checkout@v2
+    - name: ECR_Login
+      run: make ecr_login
+    - name: Build_Docker_Image
+      run: make build_docker_image
+    
+    push_docker_image:
+      defaults:
+        run:
+          working-directory: ./application
+      environment:
+        name: approval
+      needs: build_docker_image
+      runs-on: ubuntu-latest
+      env:
+        AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        ECR_REPO_NAME:  ${{ secrets.ECR_REPO_NAME }}
+      steps:
+      - uses: actions/checkout@v2
+      - name: Build_Docker_Image
         run: make build_docker_image
-
-      - name: Push docker image to Amazon ECR
-        working-directory: ./application
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
+      - name: Push_Docker_image
         run: make push_docker_image
 
 
