--- a/.github/workflows/weather-app.yml
+++ b/.github/workflows/weather-app.yml
@@ -1,8 +1,10 @@
 name: Weather-App-Build
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Deploy"]
+    branches: [master]
+    types:
+      - completed
     paths:
       - '.github/workflows/**'
       - 'application/public/**'
@@ -18,6 +20,8 @@ jobs:
     defaults:
       run:
         working-directory: ./application
+    environment:
+      name: approval
     runs-on: ubuntu-latest
     name: Build and push image to Amazon ECR
     steps:
@@ -47,4 +51,3 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
         run: make push_docker_image
-        
