--- a/.github/workflows/destroy_network_infrastructure.yml
+++ b/.github/workflows/destroy_network_infrastructure.yml
@@ -1,18 +1,15 @@
-name: build_network_infrastructure
+name: destroy_network_infrastructure
 on:
+  workflow_dispatch:
   push:
     branches:
-      - master
+      - destroy
     paths:
-      - 'orchestration/docker-compose.yml'
-      - 'orchestration/Makefile'
-      - '.github/workflows/**'
-      - 'orchestration/*dockerfile'
-      - 'orchestration/.env'
+      - '.github/workflows/destroy_network_infrastructure.yml'
       - 'infrastructure/modules/**'
       - 'infrastructure/**.tf'
 jobs:
-  terraform_plan:
+  terraform_destroy_plan:
     defaults:
       run:
         working-directory: ./orchestration
@@ -23,16 +20,16 @@ jobs:
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
     steps:
     - uses: actions/checkout@v2
-    - name: Terraform_Plan
-      run: make run_plan       
+    - name: Terraform_Destroy_Plan
+      run: make run_destroy_plan       
 
-  terraform_apply:
+  terraform_destroy_apply:
     defaults:
       run:
         working-directory: ./orchestration
     environment:
       name: approval
-    needs: terraform_plan
+    needs: terraform_destroy_plan
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -40,8 +37,5 @@ jobs:
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
     steps:
     - uses: actions/checkout@v2
-    - name: Terraform_Plan
-      run: make run_plan
-    - name: Terraform_Apply
-      run: make run_apply
-      
+    - name: Terraform_Destroy_Apply
+      run: make run_destroy_apply 
