--- a/application/Makefile
+++ b/application/Makefile
@@ -3,13 +3,9 @@ export AWS_ACCOUNT_ID
 export AWS_REGION 
 export ECR_REPO_NAME
 
-.PHONY: build_docker_image
-build_docker_image:
-	docker build -f $(DOCKERFILE) .
-
-.PHONY: tag_docker_image
-tag_docker_image:
-	docker tag $(AWS_ACCOUNT_ID).dkr.ecr.$(AWS_REGION).amazonaws.com/$(ECR_REPO_NAME):latest 
+.PHONY: build_and_tag_docker_image
+build_and_tag_docker_image:
+	docker build -t $(AWS_ACCOUNT_ID).dkr.ecr.$(AWS_REGION).amazonaws.com/$(ECR_REPO_NAME):latest -f $(DOCKERFILE) .
 
 .PHONY: ecr_login
 ecr_login:
