Updated project folder structure and files for segregation

--- a/.github/workflows/build_weather_app.yml
+++ b/.github/workflows/build_weather_app.yml
@@ -2,7 +2,8 @@ name: build_weather_app
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["build_network_infrastructure"]
+    workflows:
+      - "build_container_infrastructure"
     branches: [master]
     types:
       - completed
@@ -24,31 +25,21 @@ jobs:
     environment:
       name: approval
     runs-on: ubuntu-latest
+    env:
+      COMPOSE_FILE: "docker-compose.weather-app.yml"
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
     name: Build and push docker image to Amazon ECR
     steps:
       - name: Checkout_Repo
         uses: actions/checkout@v2
-
       - name: Build and tag docker image
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
         run: make build_and_tag_docker_image
-
       - name: Log in to Amazon ECR
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
         run: make ecr_login
-
       - name: Push docker image to ECR
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME }}
         run: make push_docker_image
