--- a/.github/workflows/build_container_infrastructure copy.yml
+++ b/.github/workflows/build_container_infrastructure copy.yml
@@ -1,13 +1,18 @@
-name: build_network_infrastructure
+name: build_container_infrastructure
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows:
+    - "build_network_infrastructure"
   push:
     branches:
       - master
+    types:
+      - completed
     paths:
       - '.github/workflows/build_network_infrastructure.yml'
-      - 'network_infrastructure/modules/**'
-      - 'network_infrastructure/**.tf'
+      - 'container_infrastructure/modules/**'
+      - 'container_infrastructure/**.tf'
 jobs:
   terraform_plan:
     defaults:
@@ -15,7 +20,7 @@ jobs:
         working-directory: ./orchestration
     runs-on: ubuntu-latest
     env:
-      COMPOSE_FILE: "docker-compose.network-infrastructure.yml"
+      COMPOSE_FILE: "docker-compose.container-infrastructure.yml"
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
@@ -33,7 +38,7 @@ jobs:
     needs: terraform_plan
     runs-on: ubuntu-latest
     env:
-      COMPOSE_FILE: "docker-compose.network-infrastructure.yml"
+      COMPOSE_FILE: "docker-compose.container-infrastructure.yml"
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
