--- a/.github/workflows/destroy_front_end.yml
+++ b/.github/workflows/destroy_front_end.yml
@@ -1,51 +1,49 @@
-name: build_container_infrastructure
+name: destroy_front_end
 on:
   workflow_dispatch:
   workflow_run:
     workflows:
-    - "build_network_infrastructure"
+    - "build_front_end"
   push:
     branches:
       - master
     types:
       - completed
     paths:
-      - '.github/workflows/build_network_infrastructure.yml'
-      - 'container_infrastructure/modules/**'
-      - 'container_infrastructure/**.tf'
+      - '.github/workflows/destroy_front_end.yml'
+      - 'front_end/modules/**'
+      - 'front_end/**.tf'
 jobs:
-  terraform_plan:
+  terraform_destroy_plan:
     defaults:
       run:
         working-directory: ./orchestration
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     env:
-      COMPOSE_FILE: "docker-compose.container-infrastructure.yml"
+      COMPOSE_FILE: "docker-compose.front-end.yml"
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
     steps:
     - uses: actions/checkout@v2
-    - name: Terraform_Plan
-      run: make run_plan       
+    - name: Terraform_Destroy_Plan
+      run: make run_destroy_plan       
 
-  terraform_apply:
+  terraform_destroy_apply:
     defaults:
       run:
         working-directory: ./orchestration
     environment:
       name: approval
-    needs: terraform_plan
+    needs: terraform_destroy_plan
     runs-on: ubuntu-latest
     env:
-      COMPOSE_FILE: "docker-compose.container-infrastructure.yml"
+      COMPOSE_FILE: "docker-compose.front-end.yml"
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
     steps:
     - uses: actions/checkout@v2
-    - name: Terraform_Plan
-      run: make run_plan
-    - name: Terraform_Apply
-      run: make run_apply
-      
+    - name: Terraform_Destroy_Apply
+      run: make run_destroy_apply
