Updating gh workflows

--- a/.github/workflows/destroy_back_end.yml
+++ b/.github/workflows/destroy_back_end.yml
@@ -3,10 +3,10 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows:
-    - "build_back_end"
+    - "destroy_front_end"
   push:
     branches:
-      - master
+      - destroy
     types:
       - completed
     paths:
