--- a/.github/workflows/build_weather_app.yml
+++ b/.github/workflows/build_weather_app.yml
@@ -21,7 +21,7 @@ jobs:
   build_weather_app:
     defaults:
       run:
-        working-directory: ./application
+        working-directory: ./orchestration
     environment:
       name: approval
     runs-on: ubuntu-latest
