--- a/.github/workflows/build_weather_app.yml
+++ b/.github/workflows/build_weather_app.yml
@@ -4,12 +4,14 @@ on:
   workflow_run:
     workflows:
       - "build_back_end"
-    branches: [master]
+    branches:
+      - master
     types:
       - completed
     paths:
       - '.github/workflows/build_weather_app.yml'
       - 'application/public/**'
+      - 'application/images/**'
       - 'application/src/**'
       - 'application/templates/**'
       - 'application/.env'
