--- a/.github/workflows/build_front_end.yml
+++ b/.github/workflows/build_front_end.yml
@@ -21,7 +21,7 @@ jobs:
       run:
         working-directory: ./orchestration
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     env:
       COMPOSE_FILE: "docker-compose.front-end.yml"
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
