--- a/.github/workflows/build_weather_app.yml
+++ b/.github/workflows/build_weather_app.yml
@@ -27,7 +27,7 @@ jobs:
     environment:
       name: approval
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     env:
       COMPOSE_FILE: "docker-compose.weather-app.yml"
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
